fix numpy homework week2

--- a/Week 2/buoi2-week2/Numpy homework-Week2.ipynb
+++ b/Week 2/buoi2-week2/Numpy homework-Week2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,53 +25,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 3 4 4 5 5 5 6 6 5 23 5 43313 3412 13\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([    1,     2,     3,     3,     4,     4,     5,     5,     5,\n",
-       "           6,     6,     5,    23,     5, 43313,  3412,    13])"
+       "array([1, 6, 6, 5, 5, 1, 7, 9, 8, 7])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr=np.array(list(map(int,input().split(\" \"))))\n",
+    "arr=np.random.randint(0,10,10)\n",
     "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([      1,       2,      -3,      -3,      -4,      -4,      -5,\n",
-       "            -5,      -5,      -6,      -6,      -5,      23,      -5,\n",
-       "           423,   23423,   42323, 4234234,   23423,     234])"
+       "array([1, 1, 9])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr=np.array([-i if i in range(3,8) else i for i in list(arr)])\n",
+    "arr=arr[(3>arr) | (arr>8)]\n",
     "arr"
    ]
   },
@@ -84,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,17 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([     0, 324286, 904165, 934801,  37163, 402822, 868114, 494654,\n",
-       "       980581, 812656])"
+       "array([     0,   7816, 150635, 121340,  16497, 418581, 526063, 520923,\n",
+       "       123444, 440688])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,17 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([65, 64, 82, 75, 24, 20, 86, 42, 71, 43]),\n",
-       " array([85, 11, 97,  7, 62, 11, 64, 79, 46, 86]))"
+       "(array([64, 89, 65, 76, 78, 35, 52, 43, 56, 80]),\n",
+       " array([71,  3, 63, 73, 35, 94, 39, 13,  8, 47]))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,22 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[64, 86]"
+       "array([35])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in x if i in y]"
+    "np.intersect1d(x,y)"
    ]
   },
   {
@@ -172,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([84, 75, 58, 40, 97, 63, 26, 30, 79, 89])"
+       "array([44, 74, 78, 25, 23, 29, 68, 95, 29, 17])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([84, 75, 58, 40, 97, 63, 26, 30, 79, 89])"
+       "array([17, 29, 95, 68, 29, 23, 25, 78, 74, 44])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +222,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +260,7 @@
        "(array([0, 1, 4]),)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,26 +287,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[9015,  137, 3817],\n",
-       "        [7811, 8089, 5680],\n",
-       "        [3364, 2107, 6382]],\n",
+       "array([[[6194,  664,   56],\n",
+       "        [8176, 8508, 9781],\n",
+       "        [8830, 1594, 7072]],\n",
        "\n",
-       "       [[2088, 5490, 7151],\n",
-       "        [3813, 8532, 5315],\n",
-       "        [2659, 2223, 1587]],\n",
+       "       [[4784, 1204, 5570],\n",
+       "        [4537, 5624, 6396],\n",
+       "        [8341, 2972, 3596]],\n",
        "\n",
-       "       [[3396, 9560,   99],\n",
-       "        [5013, 6460, 2362],\n",
-       "        [2102, 1432, 5980]]])"
+       "       [[8056, 8911, 5560],\n",
+       "        [3414, 4037, 2714],\n",
+       "        [9863, 3346, 7506]]])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -351,15 +341,15 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.41455587, -0.1719059 ,  0.4678738 ,  2.39625384, -1.42117927,\n",
-       "       -0.9388889 , -0.49935841, -1.4318672 ,  0.09141477, -0.8628758 ,\n",
-       "       -0.82221558, -0.58092269,  0.44695307, -0.1216066 , -0.05606158,\n",
-       "        0.92476291, -1.26322999, -0.44066236,  1.01620375, -2.11940763,\n",
-       "        1.00675038,  0.73334109, -1.0304775 , -0.78615066, -0.93954602,\n",
-       "        0.33181441, -0.30531303,  0.40405058, -0.27173423, -0.12204539])"
+       "array([-0.26336556,  1.10784915, -0.36429646,  0.55590396,  0.28911583,\n",
+       "        0.12147826, -1.10703605,  0.80694482,  0.63275439, -0.57061778,\n",
+       "       -0.36265314, -0.54711538, -1.80252208,  0.60638769, -0.24512882,\n",
+       "        0.61444771, -0.84968991, -0.25416708, -0.18357967,  1.13592478,\n",
+       "        1.48612379,  0.1184055 ,  0.47067041,  0.23203463, -0.76514211,\n",
+       "       -1.19366551, -1.70467461, -0.66545939, -0.19066713,  1.66836996])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.16504914234440024"
+       "-0.04077899380686931"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,39 +387,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=np.zeros((5,5))"
+    "a=np.ones((5,5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m,n= a.shape"
+    "a[1:4,1:4]=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(m):\n",
-    "    a[i][0]=1\n",
-    "    a[i][n-1]=1\n",
-    "for i in range(n):\n",
-    "    a[0][i]=1\n",
-    "    a[m-1][i]=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +418,7 @@
        "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,25 +436,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([80, 94, 89,  0, 26, 27, 53, 71, 31, 66, 20, 43, 92, 91, 16, 93, 98,\n",
-       "       46, 13, 54])"
+       "array([57, 51, 83, 48, 98, 35, 88,  1, 67, 28, 70, 15, 87,  5, 18,  6, 87,\n",
+       "       54, 99, 17])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=np.random.randint(0,100,20)\n",
-    "X"
+    "x=np.random.randint(0,100,20)\n",
+    "x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.139116251683964"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.random.uniform(0, 20)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([11]),)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(abs(x-y)==min(abs(x-y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
